# modbus-client

./: .gitignore  ChangeLog.md  LICENSE  README.md  build.hs  build.sh  default_template.csv  hie.yaml  install.nsi  modbus-client.cabal  modbus-serve.cabal  output  package.yaml  regs.csv  sample.csv  stack.yaml  weeder.dhall
app/: Main.hs
frontend/: app.js  elm.json  index.html  index_css.html  style.css  styles_css.css
frontend/elm-stuff/0.19.1/: App.elmi  App.elmo  Types.elmi  Types.elmo  Update.elmi  (+3 more)
frontend/src/: App.elm  Dropdown.elm  HeartBeat.elm  Heartbeat.elm  ModData.elm  NavigationModule.elm  Notifications.elm  Palette.elm  ReadWrite.elm  RegisterTab.elm  Settings.elm  StatusBar.elm  Types.elm  Update.elm  View.elm
frontend/tests/: ModDataSpec.elm  TypesSpec.elm  ViewSpec.elm
golden/: BaudRate.json  ByteOrder.json  HeartbeatType.json  ModData.json  ModDataUpdate.json  ModbusProtocol.json  Parity.json  SerialSettings.json  StopBits.json  WordOrder.json
mbserver/: Cargo.toml
mbserver/src/: lib.rs  main.rs
src/: App.hs  AppError.hs  CsvParser.hs  Modbus.hs  OptParser.hs  PrettyPrint.hs  Repl.hs  Server.hs  Types.hs
src/CsvParser/: Spec.hs
src/Repl/: Commands.hs  Error.hs  Heartbeat.hs  Help.hs  HelpFun.hs  Parser.hs  Types.hs
src/Types/: CSV.hs  ModData.hs  Modbus.hs  Repl.hs  Server.hs
test/: CsvParserSpec.hs  ModDataSpec.hs  ModbusSpec.hs  OptParserSpec.hs  ReplSpec.hs  ServerSpec.hs  Spec.hs  TestHelper.hs
testModbusServer/: input.csv  sample.csv  testserver
testclient/: regs.csv  testclient
testclient/mbserver/: Cargo.toml
(+2 files in other folders)
